# call

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Call.yml  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/: CONTRIBUTING.md
.github/workflows/: build.yml  cliff.yml
docs/: tutorial.md
src/: call_macro.rs  cli.rs  config.rs  main.rs
src/cmd/: init.rs  mod.rs  runner.rs
