[package]
name = "call"
version = "0.1.0"
authors = ["bingryan <bingryan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
clap = "2.33.3"
anyhow = "1.0.36"
log = "0.4.11"
yaml-rust = "0.4"
dirs = "2.0"

# https://crates.io/crates/ignore
ignore = "0.4.17"
exitcode = "1.1.2"

# shell
cmd_lib = "1.0.10"
# console process
console = "0.14.0"
indicatif = "0.15.0"