[package]
name = "rust-call"
version = "0.2.0"
authors = ["bingryan <bingryan@outlook.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Make remote development more elegant"
readme = "README.md"
repository = "https://github.com/bingryan/call"
homepage = "https://github.com/bingryan/call"
keywords = ["cli", "call", "remote", "build"]
categories = ["command-line-utilities"]
exclude = [
    "docs/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = "call"

[dependencies]
config = "0.11"
clap = "2.33.3"
anyhow = "1.0.36"
log = "0.4.11"
yaml-rust = "0.4"
dirs = "2.0"
ignore = "0.4.17"
cmd_lib = "1.0.10"
# console process
console = "0.14.0"
indicatif = "0.15.0"

# Serialize, Deserialize
serde = "1.0.128"
serde_derive = "1.0.128"

